--- a/code/Notebook_thesus.ipynb
+++ b/code/Notebook_thesus.ipynb
@@ -38,7 +38,7 @@
       ],
       "source": [
         "#comentario\n",
-        "\n",
+        "#comentario2\n",
         "import csv\n",
         "import Utils_Pln.py\n",
         "import Main\n",
